outputs/csi300-test/eoh/2025-07-28_17-06-08/evaluations/problem_eval-698270496151664569_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/csi300/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/csi300/tmp/gpt_temp_4_9f70b98e.py", line 1
    importance.}
               ^
SyntaxError: unmatched '}'
